tests/positive/Isabelle/M/Main.juvix
module M.Main;

import Stdlib.Prelude open;
import M.N open;

f (a : Nat) : Nat := g a;
