tests/negative/InvalidDefault.juvix
module InvalidDefault;

f (x : Type := Type) : Type := x;
